* Changed the encryption method.