@@ -5,12 +5,13 @@
 
 ### Screenshot
 
-<img width="1583" alt="image" src="https://github.com/w4r3s/410Blog/assets/119853210/ccaac9fc-c54d-420f-ac1b-cff1b0ff38b9">
+![](https://raw.githubusercontent.com/w4r3s/images/main/uPic/hznuLD.png)
 
-<img width="1502" alt="image" src="https://github.com/w4r3s/410Blog/assets/119853210/4a4a3bf4-37a0-4624-96f9-cc7f82c18d8f">
+![](https://raw.githubusercontent.com/w4r3s/images/main/uPic/u4snMQ.png)
 
-<img width="1525" alt="image" src="https://github.com/w4r3s/410Blog/assets/119853210/b4a3e119-0c0a-41d0-82bd-77f1b611f246">
+![](https://raw.githubusercontent.com/w4r3s/images/main/uPic/NkGaYm.png)
 
+![](https://raw.githubusercontent.com/w4r3s/images/main/uPic/VL1DZz.png)
 
 
 
