@@ -83,6 +83,7 @@ if ($_SERVER['REQUEST_METHOD'] == 'POST') {
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Write a post</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
         @font-face {
             font-family: 'Iosevka Aile';
@@ -155,5 +156,45 @@ if ($_SERVER['REQUEST_METHOD'] == 'POST') {
             <button type="submit">Post</button>
         </form>
     </main>
+
+    <script>
+$(document).ready(function() {
+    $('#content').on('paste', function(event) {
+        var items = (event.clipboardData || event.originalEvent.clipboardData).items;
+        for (index in items) {
+            var item = items[index];
+            if (item.kind === 'file') {
+                var blob = item.getAsFile();
+                var formData = new FormData();
+                formData.append('image', blob);
+
+                $.ajax({
+                    url: '../admin/imghost.php', // 确保这个路径正确指向你的图片上传处理脚本
+                    type: 'POST',
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    dataType: 'json', // 指定响应数据类型为 JSON
+                    success: function(data) { // 直接接收解析后的 JSON 对象
+                        if(data.url) {
+                            var imageUrl = data.url; // 使用解析后的 URL
+                            var markdownImage = '![](' + imageUrl + ')'; // 构造 Markdown 格式的图片链接
+                            $('#content').val($('#content').val() + "\n" + markdownImage); // 将链接插入文本区域
+                        } else {
+                            alert('Image upload failed.');
+                        }
+                    },
+                    error: function(xhr, status, error) {
+                        alert('Image upload failed. Error: ' + error);
+                    }
+                });
+                break; // 假定每次只处理一个粘贴的图片
+            }
+        }
+    });
+});
+</script>
+
+
 </body>
 </html>
